loggerapp/datalogger/driver/vrmagic/vrmusbcam2.h


// ------------------------------------------------------------------------
/// @defgroup Types                                             Basic Types
// ------------------------------------------------------------------------
/// @{

typedef unsigned char VRmBYTE;

typedef unsigned short int VRmWORD;

typedef unsigned int VRmDWORD;

typedef unsigned int VRmBOOL;


/// @}
// ------------------------------------------------------------------------
/// @defgroup General                   Error Handling / General Management
// ------------------------------------------------------------------------
/// @{

/// return value values of API function calls
typedef VRM_ENUM _VRmRetVal
{
	/// return value for failed function call
	VRM_FAILED=0,
	/// return value for successful function call
	VRM_SUCCESS=1
} VRmRetVal;
typedef struct VRmUsbCamDeviceInternal* VRmUsbCamDevice;



/// @}
// ------------------------------------------------------------------------
/// @defgroup UDS                   User Data Storage / Non-Volatile Memory
// ------------------------------------------------------------------------
/// @{

/// struct for user data storage
typedef VRM_STRUCT _VRmUserData
{
	/// length of user data in bytes
	VRmDWORD m_length;
	/// pointer to user data
	VRmBYTE* mp_data;
	/// private = additional internal data
	void* mp_private;
}VRmUserData;


/// user LUT access

/// enum for user LUT formats
typedef VRM_ENUM _VRmUserLutFormat
{
	/// no user LUT, use this to unset user LUT
	VRM_USER_LUT_NONE=0,
	/// LUT 8bit->16bit, size=256 VRmWORDs
	VRM_USER_LUT_8_TO_16,
	/// LUT 10bit->16bit, size=1024 VRmWORDs
	VRM_USER_LUT_10_TO_16,
	/// LUT 16bit->16bit, size=2^16 VRmWORDs
	VRM_USER_LUT_16_TO_16,
	VRM_USER_LUT_END
} VRmUserLutFormat;


/// get the LUT that is associated with a specific sensor port.
/// the format modifier returned is a bit combination of VRM_CORRECTION_LUT_xxx constants.
/// parameters 
///     f_device: pointer to device
///     f_port: affected sensor port, use 1 for single sensor cameras
///     f_channel: affected lut channel 0 for monochrome, 0-3 for Bayer
///     f_format: choose required LUT format, internal format is converted to requested format
///     fpp_lut: LUT buffer to write to (use VRmUsbCamFreeUserLut to free the memory when you are done)
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetUserLut(VRmUsbCamDevice f_device, VRmDWORD f_port, VRmDWORD f_channel, VRmUserLutFormat f_format,
												 VRmWORD** fpp_lut);


/// free user lut received by VRmUsbCamGetUserLut()
/// parameters 
///     fpp_lut: LUT buffer received by VRmUsbCamGetUserLut()
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamFreeUserLut(VRmWORD** fpp_lut);


/// set user LUT on the device
/// this LUT is applied in addition to the correction LUT
/// parameters 
///     f_device: pointer to device
///     f_port: affected sensor port, use 1 for single sensor cameras
///     f_channel: affected lut channel 0 for monochrome, 0-3 for Bayer
///     f_format: choose correct LUT format, matching the LUT buffer and device settings
///     fpp_lut: LUT buffer, length and content have to match the format and number of channels
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetUserLut(VRmUsbCamDevice f_device, VRmDWORD f_port, VRmDWORD f_channel,
												 VRmUserLutFormat f_format, const VRmWORD* fp_lut);


/// commit user LUT to the device
/// call this function after setting the user lut to write the lut to the device
/// parameters 
///     f_device: pointer to device
///     f_port: affected sensor port, use 1 for single sensor cameras
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamUserLutCommit(VRmUsbCamDevice f_device, VRmDWORD f_port);


typedef VRM_ENUM _VRmEventReturnType
{
	/// an error occured
	VRM_EVENT_ERROR = 0,
	/// a timeout occurred
	VRM_EVENT_TIMEOUT =  1,
	/// event detected
	VRM_EVENT_SUCCESS = 2
} VRmEventReturnType;


VRM_EXTERN VRmRetVal VRM_API VRmUsbCamWaitForStrobe(VRmUsbCamDevice f_device, int f_timeout_us, VRmEventReturnType* fp_event_type);



/// @}
// ------------------------------------------------------------------------
/// @defgroup Config                                 Configuration Settings
// ------------------------------------------------------------------------
/// @{

/// config id.
/// there are several possible camera configs stored in hardware:
/// VRmUsbCamConfigID = 0 is the factory default config (read-only)
/// VRmUsbCamConfigID = 1 is the user default config (first user config, automatically loaded at VRmUsbCamOpenDevice())
/// VRmUsbCamConfigID = 2 is the second user config
/// ...
/// VRmUsbCamConfigID = 9 is the last user config
typedef unsigned int VRmUsbCamConfigID;


/// load config. valid values for f_id = 0 to 9
/// NOTE: the grabber must be stopped when you call this function.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamLoadConfig(VRmUsbCamDevice f_device, VRmUsbCamConfigID f_id);


/// saves the current config in hardware. valid values for f_id = 1 to 9
/// NOTE: this might take some seconds (blocking) in case of an necessary firmware compression,
/// use VRmUsbCamSaveConfigRequiresFirmwareCompression to check if this will happen.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSaveConfig(VRmUsbCamDevice f_device, VRmUsbCamConfigID f_id);


/// check if next VRmUsbCamSaveConfig() requires a firmware compression. valid values for f_id = 1 to 9.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSaveConfigRequiresFirmwareCompression(VRmUsbCamDevice f_device, VRmUsbCamConfigID f_id, VRmBOOL* fp_required);


/// deletes the given config from the device. valid values for f_id = 2 to 9
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamDeleteConfig(VRmUsbCamDevice f_device, VRmUsbCamConfigID f_id);


/// gets current device config en bloque as user data.
/// use VRmUsbCamFreeUserData() to free the returned buffer after usage
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetConfigData(VRmUsbCamDevice f_device, VRmUserData** fpp_data);


/// sets current device config en bloque from user data.
/// activate config data that was previously returned by VRmUsbCamGetConfig
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetConfigData(VRmUsbCamDevice f_device, const VRmUserData* fcp_data);


/// returns true if VRmUsbCamSaveConfig() / VRmUsbCamGetConfigData() may drop some values.
/// this happens if the config was initially created by a newer application and contains
/// settings that are not supported by this software version and that therefore will be discarded
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamConfigIncludesUnsupportedValues(VRmUsbCamDevice f_device, VRmBOOL* fp_value);