loggerapp/datalogger/driver/vrmagic/vrmusbcamapi.py


# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 630
VRM_USER_LUT_NONE = 0

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 630
VRM_USER_LUT_8_TO_16 = (VRM_USER_LUT_NONE + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 630
VRM_USER_LUT_10_TO_16 = (VRM_USER_LUT_8_TO_16 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 630
VRM_USER_LUT_16_TO_16 = (VRM_USER_LUT_10_TO_16 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 630
VRM_USER_LUT_END = (VRM_USER_LUT_16_TO_16 + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 630
VRmUserLutFormat = enum__VRmUserLutFormat

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 640
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetUserLut'):
    VRmUsbCamGetUserLut = _libs['libvrmusbcam2.so'].VRmUsbCamGetUserLut
    VRmUsbCamGetUserLut.argtypes = [
        VRmUsbCamDevice, VRmDWORD, VRmDWORD, VRmUserLutFormat,
        POINTER(POINTER(VRmWORD))
    ]
    VRmUsbCamGetUserLut.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 646
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamFreeUserLut'):
    VRmUsbCamFreeUserLut = _libs['libvrmusbcam2.so'].VRmUsbCamFreeUserLut
    VRmUsbCamFreeUserLut.argtypes = [POINTER(POINTER(VRmWORD))]
    VRmUsbCamFreeUserLut.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 656
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetUserLut'):
    VRmUsbCamSetUserLut = _libs['libvrmusbcam2.so'].VRmUsbCamSetUserLut
    VRmUsbCamSetUserLut.argtypes = [
        VRmUsbCamDevice, VRmDWORD, VRmDWORD, VRmUserLutFormat, POINTER(VRmWORD)
    ]
    VRmUsbCamSetUserLut.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 664
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamUserLutCommit'):
    VRmUsbCamUserLutCommit = _libs['libvrmusbcam2.so'].VRmUsbCamUserLutCommit
    VRmUsbCamUserLutCommit.argtypes = [VRmUsbCamDevice, VRmDWORD]
    VRmUsbCamUserLutCommit.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 674
enum__VRmEventReturnType = c_int

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 674
VRM_EVENT_ERROR = 0

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 674
VRM_EVENT_TIMEOUT = 1

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 674
VRM_EVENT_SUCCESS = 2

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 674
VRmEventReturnType = enum__VRmEventReturnType

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 676
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamWaitForStrobe'):
    VRmUsbCamWaitForStrobe = _libs['libvrmusbcam2.so'].VRmUsbCamWaitForStrobe
    VRmUsbCamWaitForStrobe.argtypes = [
        VRmUsbCamDevice, c_int, POINTER(VRmEventReturnType)
    ]
    VRmUsbCamWaitForStrobe.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 692
VRmUsbCamConfigID = c_uint

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 696
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamLoadConfig'):
    VRmUsbCamLoadConfig = _libs['libvrmusbcam2.so'].VRmUsbCamLoadConfig
    VRmUsbCamLoadConfig.argtypes = [VRmUsbCamDevice, VRmUsbCamConfigID]
    VRmUsbCamLoadConfig.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 701
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSaveConfig'):
    VRmUsbCamSaveConfig = _libs['libvrmusbcam2.so'].VRmUsbCamSaveConfig
    VRmUsbCamSaveConfig.argtypes = [VRmUsbCamDevice, VRmUsbCamConfigID]
    VRmUsbCamSaveConfig.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 704
if hasattr(_libs['libvrmusbcam2.so'],
           'VRmUsbCamSaveConfigRequiresFirmwareCompression'):
    VRmUsbCamSaveConfigRequiresFirmwareCompression = _libs[
        'libvrmusbcam2.so'].VRmUsbCamSaveConfigRequiresFirmwareCompression
    VRmUsbCamSaveConfigRequiresFirmwareCompression.argtypes = [
        VRmUsbCamDevice, VRmUsbCamConfigID, POINTER(VRmBOOL)
    ]
    VRmUsbCamSaveConfigRequiresFirmwareCompression.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 707
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamDeleteConfig'):
    VRmUsbCamDeleteConfig = _libs['libvrmusbcam2.so'].VRmUsbCamDeleteConfig
    VRmUsbCamDeleteConfig.argtypes = [VRmUsbCamDevice, VRmUsbCamConfigID]
    VRmUsbCamDeleteConfig.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 711
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetConfigData'):
    VRmUsbCamGetConfigData = _libs['libvrmusbcam2.so'].VRmUsbCamGetConfigData
    VRmUsbCamGetConfigData.argtypes = [
        VRmUsbCamDevice, POINTER(POINTER(VRmUserData))
    ]
    VRmUsbCamGetConfigData.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 715
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetConfigData'):
    VRmUsbCamSetConfigData = _libs['libvrmusbcam2.so'].VRmUsbCamSetConfigData
    VRmUsbCamSetConfigData.argtypes = [VRmUsbCamDevice, POINTER(VRmUserData)]
    VRmUsbCamSetConfigData.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 720
if hasattr(_libs['libvrmusbcam2.so'],
           'VRmUsbCamConfigIncludesUnsupportedValues'):
    VRmUsbCamConfigIncludesUnsupportedValues = _libs[
        'libvrmusbcam2.so'].VRmUsbCamConfigIncludesUnsupportedValues
    VRmUsbCamConfigIncludesUnsupportedValues.argtypes = [
        VRmUsbCamDevice, POINTER(VRmBOOL)
    ]
    VRmUsbCamConfigIncludesUnsupportedValues.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
enum__VRmPropId = c_int

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_EXPOSURE_TIME_F = 4097

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_AUTO_EXPOSURE_B = 4099

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_AUTO_EXPOSURE_MAX_F = (VRM_PROPID_CAM_AUTO_EXPOSURE_B + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_SIGNAL_SOURCE_E = 4105

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_SIGNAL_SOURCE_UNKNOWN = 269025280

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_SIGNAL_SOURCE_SVIDEO = (
    VRM_PROPID_CAM_SIGNAL_SOURCE_UNKNOWN + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_SIGNAL_SOURCE_COMPOSITE = (
    VRM_PROPID_CAM_SIGNAL_SOURCE_SVIDEO + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_SIGNAL_SOURCE_YC = (VRM_PROPID_CAM_SIGNAL_SOURCE_COMPOSITE + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_FRAMERATE_MAX_F = 4106

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_EXPOSURE_TIME1_F = (VRM_PROPID_CAM_FRAMERATE_MAX_F + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_EXPOSURE_OFFSET0_ODD_LINE_F = 4108

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_EXPOSURE_OFFSET1_ODD_LINE_F = (
    VRM_PROPID_CAM_EXPOSURE_OFFSET0_ODD_LINE_F + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_ACQUISITION_RATE_MAX_F = 4110

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_AUTO_EXPOSURE_TARGET_LUMA_I = 4111

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_HBLANK_DURATION_I = 4112

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_VBLANK_DURATION_I = (VRM_PROPID_CAM_HBLANK_DURATION_I + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_TRG2EXP_TIME_F = (VRM_PROPID_CAM_VBLANK_DURATION_I + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_EXP2VS_TIME_F = 4116

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_ROW_TIME_F = (VRM_PROPID_CAM_EXP2VS_TIME_F + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_GAIN_RED_I = 4128

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_GAIN_GREEN_I = (VRM_PROPID_CAM_GAIN_RED_I + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_GAIN_BLUE_I = (VRM_PROPID_CAM_GAIN_GREEN_I + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_GAIN_MONOCHROME_I = (VRM_PROPID_CAM_GAIN_BLUE_I + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_AUTO_GAIN_B = (VRM_PROPID_CAM_GAIN_MONOCHROME_I + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_AUTO_GAIN_MAX_I = (VRM_PROPID_CAM_AUTO_GAIN_B + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_OFFSET_RED_I = (VRM_PROPID_CAM_AUTO_GAIN_MAX_I + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_OFFSET_GREEN_I = (VRM_PROPID_CAM_OFFSET_RED_I + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_OFFSET_BLUE_I = (VRM_PROPID_CAM_OFFSET_GREEN_I + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_BRIGHTNESS_I = (VRM_PROPID_CAM_OFFSET_BLUE_I + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_CONTRAST_I = (VRM_PROPID_CAM_BRIGHTNESS_I + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_SATURATION_I = (VRM_PROPID_CAM_CONTRAST_I + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_HUE_I = (VRM_PROPID_CAM_SATURATION_I + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_ANTI_BLOOMING_B = 4144

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_ANTI_BLOOMING_VOLTAGE_F = (VRM_PROPID_CAM_ANTI_BLOOMING_B + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_DARK_OFFSET_B = (VRM_PROPID_CAM_ANTI_BLOOMING_VOLTAGE_F + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_DARK_OFFSET_VOLTAGE_F = (VRM_PROPID_CAM_DARK_OFFSET_B + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_SENSOR_SIZE_I = 4160

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2props.h: 314
VRM_PROPID_CAM_MONOCHROME_MODE_B = 4162
